[package]
name = "csjsound-wasapi"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[build-dependencies]
vergen = { version = "8.2.5", features = ["build", "git", "gitoxide"] }

[dependencies]
jni = "0.19.0"
function_name = "0.3.0"
log = "0.4.17"
wasapi = { path = "../wasapi-rs" }
fast_log = "1.5.30"
lazy_static = "1.4.0"
time = { version = "0.3.14", features = ["formatting"] }
crossbeam-channel = "0.5.6"
windows = { version = "0.39.0", features = ["Win32_System_Threading", "Win32_Foundation"] }


[lib]
name = "csjsound_amd64"
crate_type = ["cdylib"]

[profile.release-with-debug]
inherits = "release"
debug = true
